<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/help_list"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.pr_idi.mydatabaseexample.HelpActivity"
    android:layout_height="0dp"
    android:layout_width="match_parent"
    android:layout_weight="1"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_main_title"
            android:textSize="22sp"
            style="@style/primaryText"
            android:paddingBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_main_add_book_title"
            android:textSize="18sp"
            style="@style/primaryText"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_main_add_book_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_main_modify_delete_title"
            android:textSize="18sp"
            style="@style/primaryText"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_main_modify_delete_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_main_change_order_title"
            android:textSize="18sp"
            style="@style/primaryText"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_main_change_order_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_add_book_title"
            android:textSize="22sp"
            style="@style/primaryText"
            android:paddingTop="16dp"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_add_book_empty_title"
            android:textSize="18sp"
            style="@style/primaryText"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_add_book_empty_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_add_book_save_title"
            android:textSize="18sp"
            style="@style/primaryText"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />

        <TextView
            android:id="@+id/help_formatable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_add_book_save_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_add_book_confirm_title"
            android:textSize="18sp"
            style="@style/primaryText"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_add_book_confirm_text" />

    </LinearLayout>

</ScrollView>


