<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_menu_by_title"
        android:title="@string/menu_by_title"
        android:orderInCategory="100"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/main_menu_by_category"
        android:title="@string/menu_by_category"
        android:orderInCategory="200"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/main_menu_add_book"
        android:title="@string/title_activity_add_book"
        android:orderInCategory="300"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/main_menu_help"
        android:title="@string/menu_help"
        android:orderInCategory="400"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/main_menu_about"
        android:title="@string/menu_about"
        android:orderInCategory="500"
        app:showAsAction="never"
        />
</menu>