<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <include android:id="@+id/app_bar"
            layout="@layout/app_bar" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/add_book_content"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_book_title"
                android:textSize="18sp"
                style="@style/primaryText"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/edit_book_title_hint"
                android:ems="10"
                android:id="@+id/edit_book_title_box"
                android:nextFocusForward="@+id/edit_book_author_box"
                android:nextFocusDown="@+id/edit_book_author_box"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_book_author"
                android:textSize="18sp"
                style="@style/primaryText"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/edit_book_author_hint"
                android:ems="10"
                android:id="@+id/edit_book_author_box"
                android:nextFocusForward="@+id/edit_book_category_box"
                android:nextFocusDown="@+id/edit_book_category_box"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_book_optional_hint"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_book_category"
                android:textSize="18sp"
                style="@style/primaryText"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/edit_book_category_hint"
                android:ems="10"
                android:id="@+id/edit_book_category_box"
                android:nextFocusForward="@+id/edit_book_publisher_box"
                android:nextFocusDown="@+id/edit_book_publisher_box"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_book_publisher"
                android:textSize="18sp"
                style="@style/primaryText"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/edit_book_publisher_hint"
                android:ems="10"
                android:id="@+id/edit_book_publisher_box"
                android:nextFocusForward="@+id/edit_book_year_box"
                android:nextFocusDown="@+id/edit_book_year_box"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_book_year"
                style="@style/primaryText"
                android:textSize="18sp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_book_year_hint"
                android:inputType="number"
                android:id="@+id/edit_book_year_box"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_book_eval"
                android:textSize="18sp"
                style="@style/primaryText"
                android:id="@+id/edit_book_eval_title"
                />

            <RatingBar
                android:paddingTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@android:style/Widget.Material.RatingBar"
                android:numStars="5"
                android:stepSize="1"
                android:id="@+id/edit_book_rating"
                />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
