<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/book_view_row_category_separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/unknown_category"
        android:textColor="@color/colorPrimary"
        style="?android:attr/listSeparatorTextViewStyle" />


    <android.support.v7.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="4dp"
        app:contentPadding="8dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="3dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >

                <TextView
                    android:id="@+id/book_view_row_title_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown_title_author"
                    android:textSize="18sp"
                    style="@style/primaryText"
                    />

                <TextView
                    android:id="@+id/book_view_row_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown_category"
                    android:textSize="14sp"
                    style="@style/secondaryText"
                    />

                <TextView
                    android:id="@+id/book_view_row_publisher_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown_publisher_year"
                    android:textSize="14sp"
                    style="@style/secondaryText"
                    />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    >

                    <RatingBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/book_view_row_rating"
                        style="@android:style/Widget.Material.RatingBar.Small"
                        android:numStars="5"
                        />

                    <TextView
                        android:layout_marginStart="5dp"
                        android:text="@string/unknown_evaluation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:id="@+id/book_view_personal_evaluation" />

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_more_vert_black_24dp"
                android:alpha="0.5"
                android:id="@+id/book_view_row_menu"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
